--- a/impact.html
+++ b/impact.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Notre impact — Djuikem Academy</title>
+  <title>Notre impact — Tioh Academy</title>
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Open+Sans&display=swap" rel="stylesheet">
 
@@ -203,7 +203,7 @@
   <!-- Header -->
   <header>
     <div class="container">
-      <h1 class="logo">Djuikem Academy</h1>
+      <h1 class="logo">Tioh Academy</h1>
       <nav>
         <ul>
           <li><a href="index.html#accueil">Accueil</a></li>
@@ -240,7 +240,7 @@
   <section class="impact-section">
     <h2>🟣 Actions sur le terrain</h2>
     <p>
-      Depuis 2019, <strong>Djuikem Academy</strong> intervient dans des écoles, bibliothèques et espaces communautaires,
+      Depuis 2019, <strong>Tioh Academy</strong> intervient dans des écoles, bibliothèques et espaces communautaires,
       pour redonner vie aux mathématiques à travers des activités ludiques et humaines.  
       Ces moments favorisent la confiance, la curiosité et le rêve scientifique chez les jeunes.
     </p>
@@ -271,8 +271,8 @@
 
     <div class="social-impact">
       <a href="https://www.youtube.com/@tiohacademy" target="_blank">📺 YouTube</a>
-      <a href="https://www.linkedin.com/in/clotilde-djuikem-8186901a0/" target="_blank">💼 LinkedIn</a>
-      <a href="https://djuikem-academy.github.io" target="_blank">🌐 Site web</a>
+      <a href="https://www.linkedin.com/in/clotilde-Tioh-8186901a0/" target="_blank">💼 LinkedIn</a>
+      <a href="https://Tioh-academy.github.io" target="_blank">🌐 Site web</a>
     </div>
   </section>
 
@@ -289,7 +289,7 @@
 
   <!-- Footer -->
   <footer>
-    <p>© 2025 Djuikem Academy — Inspirer • Innover • Orienter</p>
+    <p>© 2025 Tioh Academy — Inspirer • Innover • Orienter</p>
   </footer>
 
 </body>
