--- a/activites.html
+++ b/activites.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Nos activités — Djuikem Academy</title>
+  <title>Nos activités — Tioh Academy</title>
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Open+Sans&display=swap" rel="stylesheet">
 
@@ -100,7 +100,7 @@
   <!-- Header -->
   <header>
     <div class="container">
-      <h1 class="logo">Djuikem Academy</h1>
+      <h1 class="logo">Tioh Academy</h1>
       <nav>
         <ul>
           <li><a href="index.html#accueil">Accueil</a></li>
@@ -124,7 +124,7 @@
 
  <!-- Section Webinaire -->
 <section id="webinaire" class="section">
-  <h2>Djuikem Academy Webinaire : Les pionnières des sciences</h2>
+  <h2>Tioh Academy Webinaire : Les pionnières des sciences</h2>
   <!-- Bulle de date -->
 <div class="date-bulle">
   📅 <strong>31 octobre 2025 — 16h GMT — Gratuit </strong>
@@ -139,7 +139,7 @@
   <div class="webinaire">
     <h3> DAW1: Quand la curiosité mène jusqu’aux STEM</h3>
     <p>
-      Pour ce premier DAW, <strong> Clotilde Djuikem</strong> fondatrice de Djuikem Academy vous embarque dans un voyage inspirant à travers le temps et les étoiles.  
+      Pour ce premier DAW, <strong> Clotilde Tioh</strong> fondatrice de Tioh Academy vous embarque dans un voyage inspirant à travers le temps et les étoiles.  
       Avec des histoires vraies, des jeux interactifs et des mini-défis mathématiques, les enfants découvrent
       la beauté de la science sous un nouveau jour.
     </p>
@@ -153,7 +153,7 @@
  
     <!-- Partie personnelle : ton témoignage -->
        <div class="photo-intervenant">
-  <img src="images/intervenantes/clotilde_djuikem.jpeg" alt="Clotilde Djuikem - Intervenante du webinaire">
+  <img src="images/intervenantes/clotilde_Tioh.jpeg" alt="Clotilde Tioh - Intervenante du webinaire">
 </div>
 
     <div class="temoignage">
@@ -190,7 +190,7 @@
 
   <!-- Footer -->
   <footer>
-    <p>© 2025 Djuikem Academy — Inspirer • Innover • Orienter</p>
+    <p>© 2025 Tioh Academy — Inspirer • Innover • Orienter</p>
   </footer>
 
 </body>
