--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <!-- Barre de navigation -->
   <header>
     <div class="container">
-      <h1 class="logo">Djuikem Academy</h1>
+      <h1 class="logo">Tioh Academy</h1>
       <nav>
         <ul>
          <li><a href="index.html#accueil" class="active">Accueil</a></li>
@@ -50,7 +50,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <section id="missions" class="section">
     <h2>Notre mission</h2>
     <p>
-      Chez <strong>Djuikem Academy</strong>, nous croyons que les mathématiques sont bien plus qu’une discipline scolaire :
+      Chez <strong>Tioh Academy</strong>, nous croyons que les mathématiques sont bien plus qu’une discipline scolaire :
       elles sont un langage universel qui relie la nature, la science, la technologie et la vie quotidienne.
       Notre objectif est de réconcilier les adultes avec les mathématiques tout en éveillant la curiosité des enfants dès le plus jeune âge.
     </p>
@@ -148,8 +148,8 @@ document.addEventListener("DOMContentLoaded", () => {
     <p>Retrouvez-nous sur :</p>
     <div class="socials">
    <a href="https://www.youtube.com/@tiohacademy" target="_blank" rel="noopener noreferrer">YouTube</a> |
-    <a href="https://www.linkedin.com/in/clotilde-djuikem-8186901a0/" target="_blank" rel="noopener noreferrer">LinkedIn</a> |
-    <a href="https://djuikem-academy.github.io" target="_blank" rel="noopener noreferrer">Website</a>
+    <a href="https://www.linkedin.com/in/clotilde-Tioh-8186901a0/" target="_blank" rel="noopener noreferrer">LinkedIn</a> |
+    <a href="https://Tioh-academy.github.io" target="_blank" rel="noopener noreferrer">Website</a>
     </div>
   </section>
 
