--- a/impact.html
+++ b/impact.html
@@ -240,7 +240,7 @@
   <section class="impact-section">
     <h2>🟣 Actions sur le terrain</h2>
     <p>
-      Depuis 2019, <strong>Tioh Academy</strong> intervient dans des écoles, bibliothèques et espaces communautaires,
+      Depuis 2019, <strong>Clotilde Djuikem</strong> intervient dans des écoles, bibliothèques et espaces communautaires,
       pour redonner vie aux mathématiques à travers des activités ludiques et humaines.  
       Ces moments favorisent la confiance, la curiosité et le rêve scientifique chez les jeunes.
     </p>
@@ -272,7 +272,7 @@
     <div class="social-impact">
       <a href="https://www.youtube.com/@tiohacademy" target="_blank">📺 YouTube</a>
       <a href="https://www.linkedin.com/in/clotilde-Tioh-8186901a0/" target="_blank">💼 LinkedIn</a>
-      <a href="https://Tioh-academy.github.io" target="_blank">🌐 Site web</a>
+      <a href="https://tioh-academy.github.io" target="_blank">🌐 Site web</a>
     </div>
   </section>
 
