--- a/activites.html
+++ b/activites.html
@@ -153,7 +153,7 @@
  
     <!-- Partie personnelle : ton témoignage -->
        <div class="photo-intervenant">
-  <img src="images/intervenantes/clotilde_Tioh.jpeg" alt="Clotilde Tioh - Intervenante du webinaire">
+  <img src="images/intervenantes/clotilde_djuikem.jpeg" alt="Clotilde Djuikem - Intervenante du webinaire">
 </div>
 
     <div class="temoignage">
