--- a/activites.html
+++ b/activites.html
@@ -137,9 +137,9 @@
   </p>
 
   <div class="webinaire">
-    <h3> DAW1: Quand la curiosité mène jusqu’aux STEM</h3>
+    <h3> TAW1: Quand la curiosité mène jusqu’aux STEM</h3>
     <p>
-      Pour ce premier DAW, <strong> Clotilde Djuikem</strong> fondatrice de Tioh Academy vous embarque dans un voyage inspirant à travers le temps et les étoiles.  
+      Pour ce premier TAW, <strong> Clotilde Djuikem</strong> fondatrice de Tioh Academy vous embarque dans un voyage inspirant à travers le temps et les étoiles.  
       Avec des histoires vraies, des jeux interactifs et des mini-défis mathématiques, les enfants découvrent
       la beauté de la science sous un nouveau jour.
     </p>
