--- a/ressources.html
+++ b/ressources.html
@@ -196,22 +196,22 @@
     <!-- 🟡 Documents d’inspiration -->
     <h3 class="bubble-title bubble-jaune">Documents d’inspiration</h3>
     <div class="bloc-list">
-      <a href="https://cTioh.github.io/pdfs/outreach/Inspiration_8eme.pdf" target="_blank" class="bloc-item">
+      <a href="https://cdjuikem.github.io/pdfs/outreach/Inspiration_8eme.pdf" target="_blank" class="bloc-item">
         <h4> Inspiration 8ème</h4>
         <p>Document d’inspiration pour le niveau 8ᵉ — PDF.</p>
       </a>
 
-      <a href="https://cTioh.github.io/pdfs/outreach/Inspiration_11eme.pdf" target="_blank" class="bloc-item">
+      <a href="https://cdjuikem.github.io/pdfs/outreach/Inspiration_11eme.pdf" target="_blank" class="bloc-item">
         <h4> Inspiration 11ème</h4>
         <p>Document d’inspiration pour le niveau 11ᵉ — PDF.</p>
       </a>
 
-      <a href="https://cTioh.github.io/pdfs/outreach/Inspiration_12eme.pdf" target="_blank" class="bloc-item">
+      <a href="https://cdjuikem.github.io/pdfs/outreach/Inspiration_12eme.pdf" target="_blank" class="bloc-item">
         <h4> Inspiration 12ème</h4>
         <p>Document d’inspiration pour le niveau 12ᵉ — PDF.</p>
       </a>
 
-      <a href="https://cTioh.github.io/pdfs/outreach/Inspiration_college_LouisRiel.pdf" target="_blank" class="bloc-item">
+      <a href="https://cdjuikem.github.io/pdfs/outreach/Inspiration_college_LouisRiel.pdf" target="_blank" class="bloc-item">
         <h4> Inspiration collège Louis-Riel (9–10)</h4>
         <p>Projet collaboratif entre élèves et enseignants — PDF.</p>
       </a>
@@ -220,7 +220,7 @@
     <!-- 🟣 Livres & Publications -->
     <h3 class="bubble-title bubble-violet">Livres & Publications</h3>
     <div class="bloc-list">
-      <a href="https://cTioh.github.io/pdfs/100_Applications_Concr%C3%A8tes.pdf" target="_blank" class="bloc-item">
+      <a href="https://cdjuikem.github.io/pdfs/100_Applications_Concr%C3%A8tes.pdf" target="_blank" class="bloc-item">
         <h4> 100 applications concrètes des mathématiques</h4>
         <p>La base des IA — Avril 2025.</p>
       </a>
